--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo-asset": "^6.0.0",
     "expo-constants": "6.0.0",
     "expo-font": "~6.0.0",
+    "expo-linear-gradient": "^6.0.0",
     "expo-web-browser": "6.0.0",
     "native-base": "^2.13.5",
     "react": "16.8.3",
@@ -26,7 +27,9 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
     "react-native-gesture-handler": "~1.3.0",
     "react-native-web": "^0.11.4",
-    "react-navigation": "^3.11.0"
+    "react-navigation": "^3.11.0",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^6.0.0",
